# vknn_cookbook

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  compile_shaders.py  vknn_cookbook.sln
autodiff_python/: main.py
autodiff_python/madml/: __init__.py  init.py  tensor.py
autodiff_python/madml/nn/: linear.py  module.py
cookbook/: activation.hpp  binary_ops.cpp  binary_ops.hpp  blas.cpp  cookbook.cpp  cookbook.vcxproj  cookbook.vcxproj.filters  framework.h  loss.hpp  optimizer.hpp  reduction.hpp  unary_ops.cpp  unary_ops.hpp
cookbook/activation/: relu.comp
cookbook/activation/linear/: leakyrelu.comp  prelu.comp  relu.comp  relu.comp.spv  selu.comp  sigmoid.comp
cookbook/activation/non_linear/: softmax.comp
cookbook/binary_ops/arithmetic/: add.comp
cookbook/blas/: gemm.comp  xt_gemm.comp
cookbook/linear/: wt_gemm.comp
cookbook/loss/: huber.comp
cookbook/optimizers/: adagrad.comp  adam.comp  rmsprop.comp  sgd.comp
cookbook/reductions/: avg_reduce.comp
cookbook/transform/: col2vol.comp  index.comp  transpose.comp  vol2col.comp
cookbook/unary_ops/arithmetic/: abs.comp  cos.comp  cosh.comp  inverse.comp  log.comp  neg.comp  sin.comp  sinh.comp  sqrt.comp  tan.comp  tanh.comp
cookbook/unary_ops/logical/: not.comp
engine/: buffer.cpp  buffer.h  common.h  context.cpp  context.h  engine.h  engine.vcxproj  engine.vcxproj.filters  layer.cpp  layer.h  render.h  tensor.cpp  tensor.h  utils.cpp  utils.h
include/: activation.hpp  binary_ops.hpp  blas.hpp  cookbook.hpp  maksed_ops.hpp  normalize.hpp  optimizer.hpp  padding.hpp  spv_shader.h  spv_shader.hpp  transform.hpp  unary_ops.hpp
include/engine/: buffer.h  common.h  engine.h  layer.h  tensor.h  utils.h
python_framework/: main.py
python_framework/madml/: manager.py  tensor.py
python_framework/madml/nn/: __init__.py  activation.py  convolution.py  pooling.py  transform.py
sharding_tensors/madml/: __init__.py  init.py  manager.py  tensor.py
sharding_tensors/madml/nn/: activation.py  convolution.py  module.py  normalization.py  pooling.py  transform.py
src/: CMakeLists.txt  activation.cpp  binary_ops.cpp  blas.cpp  cookbook.cpp  spv_shader.cpp  unary_ops.cpp
src/engine/: buffer.cpp  context.cpp  engine.cpp  layer.cpp  tensor.cpp
testing_main/: testing_main.vcxproj
tests/: CMakeLists.txt  test_activation.cpp  test_binary_ops.cpp  test_main.cpp
